--- a/src/main/webapp/WEB-INF/views/main/index.html
+++ b/src/main/webapp/WEB-INF/views/main/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Main page</title>
 </head>
 <body>
+
+<a th:href="@{/users}">Users</a>
 
 </body>
 </html>
